# utf16.rs

./: Cargo.toml  LICENSE  README.md
src/: iterators.rs  lib.rs  slice.rs  utf16str.rs  utf16string.rs  utils.rs
